<resources>
    <string name="app_name">ImmuneApp</string>
    <string name="app_image">AppImage</string>
    <string name="fragment_one">Read Me</string>
    <string name="fragment_two">Chats</string>
    <string name="fragment_three">Schedule</string>

    <string name="Name">Aurielle Hoffman</string>
    <string name="Email">haurielle@gmail.com</string>

    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="M">Male</string>
    <string name="F">Female</string>

    <string name="specialty">General Practitioner</string>
    <string name="meeting_times">Meeting Times</string>

    <string name="news">Study shows riding a bike to work can cut the risk of cancer</string>
    <string name="news_time">8:00am</string>
    <string name="news_date">April 20,2017</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gender_prompt">Choose Gender</string>

    <string name="dose_name">Hepatitis B</string>
    <string name="dose_date">Due on 25th Dec, 2017</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
