<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textviewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/news"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="5dp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/textviewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_date"
            android:padding="10dp"
            />

        <TextView
            android:id="@+id/textviewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_time"
            />

    </LinearLayout>



</LinearLayout>



</RelativeLayout>