<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayoutMainGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >



            <ImageView
                android:id="@+id/gridviewImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/appdemoimage"
                />

            <TextView
                android:id="@+id/gridviewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:text="@string/Name"
                android:textColor="@color/colorBlack"
                />

            <LinearLayout
                android:id="@+id/linearLayoutChild"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/gridviewAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="18sp"
                    android:text="@string/age"
                    android:textColor="@color/colorBlack"
                    android:layout_marginRight="10dp"
                    />

                <TextView
                    android:id="@+id/gridviewGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="18sp"
                    android:text="@string/gender"
                    android:textColor="@color/colorBlack"
                    android:layout_marginRight="10dp"

                    />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/buttonAddChild"
            android:layout_below="@+id/linearLayoutMainGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Add Child"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:layout_margin="20dp"
            />


    </RelativeLayout>


</android.support.v4.widget.NestedScrollView>